fix vertical gap on photos page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -447,7 +447,7 @@
     }
 
     .square-photo-grid {
-        @apply w-full grid gap-x-2 gap-y-0 mx-auto px-0 grid-cols-2 sm:grid-cols-4 sm:gap-y-2 md:grid-cols-5 overflow-hidden;
+        @apply w-full grid gap-x-2 gap-y-2 mx-auto px-0 grid-cols-2 sm:grid-cols-4 md:grid-cols-5 overflow-hidden;
 
         .grid-element {
             @apply flex flex-col justify-center items-center;
